# a2a-adapter-core

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
a2a_adapter_core.egg-info/: PKG-INFO  SOURCES.txt
src/a2a_adapter_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/a2a_adapter_core/client/: request_context.py
src/a2a_adapter_core/common/contracts/: extensions.py
src/a2a_adapter_core/server/: application.py  error_responses.py  handlers.py  request_parsing.py  response_limits.py
tests/: test_smoke.py
tests/client/: test_request_context.py
tests/server/: test_handler_logic.py  test_handlers.py  test_response_limits.py
